--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
     "@gltf-transform/functions": "^3.0.1",
     "lil-gui": "^0.18.0",
     "postprocessing": "^6.29.3",
-    "sharp": "^0.31.3",
-    "vite": "^4.1.2",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-gltf": "^3.1.0"
+    "vite": "^4.1.2"
   },
   "dependencies": {
-    "three": "^0.148.0"
+    "three": "^0.151.0"
   },
   "prettier": {
     "printWidth": 140,
